panigation prevent n+1 query for search book
